--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">M. Ghozy Al Haqqoni</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-      <h2>A <span>Data Enthusiast</span> from Jakarta, Indonesia </h2>
+      <h2>A <span>Civil Servant Candidate</span> from Bengkulu, Indonesia </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
