--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
             <h4>Statistician</h4>
             <h5>April 2021 - Present</h5>
             <p><em>Directorate of Information System and Statistics, BPS-Statistics, Jakarta, Indonesia </em></p>
-            <p>To all intents and purposes, I have none interest in information system proficient, but because I couldn't choose where I have to work and stay, I have to learn more about it, I guess :(</p>
+            <p>To all intents and purposes, I have none interest in information system proficient, but In view of the fact that I couldn't choose where I have to work and stay, I have to learn more about it, I guess :(</p>
             <ul>
-              <li>Bismillah, pasti bisa zy</li>
+              <li>hahaha, bisa gak zy?</li>
             </ul>
             </p>
           </div>
