--- a/index.html
+++ b/index.html
@@ -201,9 +201,11 @@
         </div>
       </div>
 
-    </div><!-- End hobbies  -->
+    </div>
+    <!-- End hobbies  -->
 
-  </section><!-- End About Section -->
+  </section>
+  <!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -213,7 +215,7 @@
         <h2>Resume</h2>
       </div>
 
-      <div class="row">
+      <div class="row justify-center">
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
@@ -221,7 +223,7 @@
             <h5>2016 - 2020</h5>
             <p><em>Politeknik Statistika STIS, Jakarta, Indonesia</em></p>
             <p><em>GPA: 3.56</em></p>
-            <p>Earned Bachelor and Applied Science (S.Tr.Stat) degree and Graduated in October 2020 on a thesis entitled "Kajian Penerapan Data Marketplace dalam Penghitungan Indeks Harga Konsumen (Studi Kasus: Kota IHK di Pulau Jawa" under supervision of <a href="https://scholar.google.com/citations?user=_9iYtTN6Ff8C&hl=en" target="_blank">Setia Pramana, Ph.D</a></p>
+            <p>Earned Bachelor OF Applied Science (S.Tr.Stat) degree and Graduated in October 2020 on a thesis entitled "Kajian Penerapan Data Marketplace dalam Penghitungan Indeks Harga Konsumen (Studi Kasus: Kota IHK di Pulau Jawa)" under supervision of <a href="https://scholar.google.com/citations?user=_9iYtTN6Ff8C&hl=en" target="_blank">Setia Pramana, Ph.D</a></p>
           </div>
           <div class="resume-item">
             <h4>Senior High School 2 Bandarlampung</h4>
