--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h2>Resume</h2>
       </div>
 
-      <div class="row justify-center">
+      <div class="row justify-content-center">
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
