--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             <h5>202x</h5>
             <p><em>Bismillah </em></p>
           </div>
+        </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Achievements</h3>
           <div class="resume-item">
