--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
             <h5>2016 - 2020</h5>
             <p><em>Politeknik Statistika STIS, Jakarta, Indonesia</em></p>
             <p><em>GPA: 3.56</em></p>
-            <p>Earned Bachelor OF Applied Science (S.Tr.Stat) degree and Graduated in October 2020 on a thesis entitled "Kajian Penerapan Data Marketplace dalam Penghitungan Indeks Harga Konsumen (Studi Kasus: Kota IHK di Pulau Jawa)" under supervision of <a href="https://scholar.google.com/citations?user=_9iYtTN6Ff8C&hl=en" target="_blank">Setia Pramana, Ph.D</a></p>
+            <p>Earned Bachelor Of Applied Statistics (S.Tr.Stat) degree and Graduated in October 2020 on a thesis entitled "Kajian Penerapan Data Marketplace dalam Penghitungan Indeks Harga Konsumen (Studi Kasus: Kota IHK di Pulau Jawa)" under supervision of <a href="https://scholar.google.com/citations?user=_9iYtTN6Ff8C&hl=en" target="_blank">Setia Pramana, Ph.D</a></p>
           </div>
           <div class="resume-item">
             <h4>Senior High School 2 Bandarlampung</h4>
             <h5>2014 - 2016</h5>
             <p><em>Bandarlampung, Indonesia</em></p>
             <p><em>GPA: 3.55 (88.7)</em></p>
-            <p>Graduated on 2016 and a part of acceleration class in Natural Sciences</p>
+            <p>Graduated in 2016 and a part of acceleration class in Natural Sciences</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -239,7 +239,7 @@
             <h4>Statistician</h4>
             <h5>April 2021 - Present</h5>
             <p><em>Directorate of Information System and Statistics, BPS-Statistics, Jakarta, Indonesia </em></p>
-            <p>To all intents and purposes, I have none interest in information system proficient, but In view of the fact that I couldn't choose where I have to work and stay, I have to learn more about it, I guess :(</p>
+            <p>To all intents and purposes, I have none interest in information system proficient, but in view of the fact that I couldn't choose where I have to work and stay, I have to learn more about it, I guess</p>
             <ul>
               <li>hahaha, bisa gak zy?</li>
             </ul>
@@ -282,8 +282,8 @@
             <h4>2021</h4>
             <p>
               <ul>
-                <li>A</li>
-                <li>B</li>
+                <li>BPK Sub-regional (ASEAN) Hackathon</li>
+                <li>EJAVEC</li>
               </ul>
             </p>
           </div>
