--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-lg">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Applied Science (S.Tr.Stat)</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Applied Statistics (S.Tr.Stat)</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 16.9293@stis.ac.id</li>
               </ul>
             </div>
@@ -219,7 +219,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Bachelor of Applied Science</h4>
+            <h4>Bachelor of Applied Statistics</h4>
             <h5>2016 - 2020</h5>
             <p><em>Politeknik Statistika STIS, Jakarta, Indonesia</em></p>
             <p><em>GPA: 3.56</em></p>
@@ -230,11 +230,11 @@
             <h5>2014 - 2016</h5>
             <p><em>Bandarlampung, Indonesia</em></p>
             <p><em>GPA: 3.55 (88.7)</em></p>
-            <p>Graduated in 2016 and a part of acceleration class in Natural Sciences</p>
+            <p>Graduated in 2016, a part of acceleration class in Natural Science, a person who loves biology and wanted to become a surgeon and ends up to become a candidate of BPS-Statistics Indonesia's employee</p>
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">BPS-Statistics Professional Experience</h3>
           <div class="resume-item">
             <h4>Statistician</h4>
             <h5>April 2021 - Present</h5>
@@ -267,12 +267,12 @@
           <h3 class="resume-title">Scholarships</h3>
           <div class="resume-item">
             <h4>Doctoral Scholarships</h4>
-            <h5>20xx</h5>
-            <p><em>Bismillah </em></p>
+            <h5>2021+x+y</h5>
+            <p><em>Bismillah</em></p>
           </div>
           <div class="resume-item">
             <h4>Master Scholarships</h4>
-            <h5>202x</h5>
+            <h5>2021+x</h5>
             <p><em>Bismillah </em></p>
           </div>
         </div>
@@ -283,13 +283,34 @@
             <p>
               <ul>
                 <li>BPK Sub-regional (ASEAN) Hackathon</li>
-                <li>EJAVEC</li>
               </ul>
             </p>
           </div>
           <div class="resume-item">
             <h4>2020</h4>
-            <p><em>undercontructions </em></p>
+            <p><em>undercontructions</em></p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Publications</h3>
+          <div class="resume-item">
+            <h4>2021</h4>
+            <p>
+              <ul>
+                <li>is also undercontructions</li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Research Grants</h3>
+          <div class="resume-item">
+            <h4>2021</h4>
+            <p>
+              <ul>
+                <li>is also undercontructions</li>
+              </ul>
+            </p>
           </div>
         </div>
         
