--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </div>
           <div class="resume-item">
             <h4>2020</h4>
-            <p><em>undercontructions</em></p>
+            <p><em>constructions in progress</em></p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -297,7 +297,7 @@
             <h4>2021</h4>
             <p>
               <ul>
-                <li>is also undercontructions</li>
+                <li>is also underconstructions</li>
               </ul>
             </p>
           </div>
@@ -308,7 +308,7 @@
             <h4>2021</h4>
             <p>
               <ul>
-                <li>is also undercontructions</li>
+                <li>is also underconstructions</li>
               </ul>
             </p>
           </div>
