--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Applied Statistics (S.Tr.Stat)</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 16.9293@stis.ac.id</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 16.9293[at]stis[dot]ac[dot]id</li>
               </ul>
             </div>
           </div>
@@ -358,7 +358,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>16.9293@stis.ac.id</p>
+            <p>16.9293[at]stis[dot]ac[dot]id</p>
           </div>
         </div>
       </div>
@@ -400,7 +400,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    CSS source: <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy; 2021 Haqqoni, M. Powered by: <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
