--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="row">
             <div class="col-lg">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
+                <li><i class="icofont-rounded-right"></i> <strong>DoB:</strong> April 6, 1999</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Applied Statistics (S.Tr.Stat)</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 16.9293[at]stis[dot]ac[dot]id</li>
               </ul>
