final for today

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Civil servant &amp; ML Enthusiast</h3>
+          <h3>Civil servant &amp; ML Engineer [to be]</h3> 
           <p class="font-italic">
             an ordinary guy who works in the Civil Service and have lot of interest in data science, i.e. machine learning.
           </p>
@@ -100,7 +100,7 @@
             I'm a fresh graduate (October, 2020) at Politeknik Statistika STIS, Jakarta, Indonesia in Computational Statistics with Data Science as minor concentration.  Currently living in a small-town in Sumatera Island called Bengkulu, Indonesia.
           </p>
           <p>
-            My research interests are usually related to data proficiency, ranging from exploratory data analytics, visualizations, statistical thinking and methods, stochastic process and time series, machine learning, and bioinformatics. Beside that, I'm currenty learning about responsive web application.
+            My research interests are usually related to data proficiency, ranging from exploratory data analytics, visualizations, statistical thinking and methods, stochastic process and time series, machine learning and deep learning. Beside that, I'm currenty learning about responsive web application and bioinformatics (beginner).
           </p>
           <p>
             If you are interested in collaborating with me, please hit me up at my email or you can contact me in social media.
@@ -181,22 +181,26 @@
       <div class="row">
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h4>Photograph</h4>
+            <h5>Leisure time: </h5>
+            <p>Photograph &amp; Videograph, sometimes Reading (lol)</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h4>Videograph</h4>
+            <h5>Enjoy: </h5>
+            <p>Whodunit Movies or TV-Series</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h4>Swimming</h4>
+            <h5>Sports: </h5>
+            <p>Swimming, Running, Bicycling</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h4>Bicycling</h4>
+            <h5>Most Likely: </h5>
+            <p>Eat and Sleep!</p>
           </div>
         </div>
       </div>
@@ -239,9 +243,9 @@
             <h4>Statistician</h4>
             <h5>April 2021 - Present</h5>
             <p><em>Directorate of Information System and Statistics, BPS-Statistics, Jakarta, Indonesia </em></p>
-            <p>To all intents and purposes, I have none interest in information system proficient, but in view of the fact that I couldn't choose where I have to work and stay, I have to learn more about it, I guess</p>
+            <p>To all intents and purposes, I have almost none interest in information system proficient, but in view of the fact that I couldn't choose where I have to work and stay (Disclaimer: in the level of Directorate not Provinces), I have to learn more about it, I guess</p>
             <ul>
-              <li>hahaha, bisa gak zy?</li>
+              <li>hahaha, bismillah</li>
             </ul>
             </p>
           </div>
@@ -400,7 +404,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    &copy; 2021 Haqqoni, M. Powered by: <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    &copy; 2021 Haqqoni, M. Powered by: <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
