--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
       <div class="row justify-content-center">
         <div class="col-lg-6">
-          <h3 class="resume-title">Education</h3>
+          <h3 class="resume-title">Educations</h3>
           <div class="resume-item">
             <h4>Bachelor of Applied Statistics</h4>
             <h5>2016 - 2020</h5>
@@ -238,7 +238,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">BPS-Statistics Professional Experience</h3>
+          <h3 class="resume-title">BPS-Statistics Professional Experiences</h3>
           <div class="resume-item">
             <h4>Statistician</h4>
             <h5>April 2021 - Present</h5>
