--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon"> -->
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/site.webmanifest">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -41,9 +45,9 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">M. Ghozy Al Haqqoni</a></h1>
+      <h1><a href="https://github.com/mghozyah/mghozyah.github.io" target="_blank">M. Ghozy Al Haqqoni</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>A <span>Civil Servant Candidate</span> from Bengkulu, Indonesia </h2>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -75,7 +79,12 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Ghozy</p>
+        <p>Hi, I'm Ghozy </p>
+        <!-- <p>
+          <div class="p2">
+            [He/Him]
+          </div>
+        </p> -->
       </div>
 
       <div class="row">
@@ -100,7 +109,7 @@
             I'm a fresh graduate (October, 2020) at Politeknik Statistika STIS, Jakarta, Indonesia in Computational Statistics with Data Science as minor concentration.  Currently living in a small-town in Sumatera Island called Bengkulu, Indonesia.
           </p>
           <p>
-            My research interests are usually related to data proficiency, ranging from exploratory data analytics, visualizations, statistical thinking and methods, stochastic process and time series, machine learning and deep learning. Beside that, I'm currenty learning about responsive web application and bioinformatics (beginner).
+            My research interests are usually related to data proficiency, ranging from exploratory data analytics, visualizations, statistical thinking and methods, stochastic process and time series, machine learning and deep learning. Beside that, I'm currenty learning about progressive web application and bioinformatics (beginner).
           </p>
           <p>
             If you are interested in collaborating with me, please hit me up at my email or you can contact me in social media.
@@ -336,10 +345,10 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>Orcid</h3>
+            <h3>Academic Profiles</h3>
             <!-- <a href="https://orcid.org/0000-0001-9239-1544" target="_blank" class="orcid">https://orcid.org/0000-0001-9239-1544</a> -->
             <div itemscope itemtype="https://schema.org/Person">
-              <a itemprop="sameAs" content="https://orcid.org/0000-0001-9239-1544" href="https://orcid.org/0000-0001-9239-1544" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0001-9239-1544</a>
+              <a itemprop="sameAs" content="https://orcid.org/0000-0001-9239-1544" href="https://orcid.org/0000-0001-9239-1544" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">Orcid</a>
             </div>
           </div>
         </div>
